slight css modifications to footer, tutor page, and login forms to fix whitespace below footer

--- a/application/client/src/css/TutorPage.css
+++ b/application/client/src/css/TutorPage.css
@@ -1,3 +1,7 @@
+.tutor-content {
+  padding: 35px;
+}
+
 .container {
   max-width: 70%;
   margin-top: 50px;
